MMK-31 changed wordings per request

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -93,19 +93,19 @@ general.calNetPassphraseRequirements=<ol>\n \
 
 # Navigation
 navigation.manage.wpa=AirBears2 Login Key
-navigation.manage.bapps=bConnected Login Key
+navigation.manage.bapps=Google Apps Login Key
 navigation.other=My CalNet
 
 # Page Titles
 auth.index.title=Login via CalNet
 auth.notAuthorized.title=Not Authorized
 main.index.title=Welcome
-bapps.index.title=bConnected Login Key Options
-bapps.choose.title=Choose bConnected Account
-bapps.set.title=Set bConnected Login Key
-bapps.save.title=Set bConnected Login Key
-bapps.view.title=Your bConnected Login Key
-bapps.delete.title=Delete bConnected Login Key
+bapps.index.title=Google Apps Login Key Options
+bapps.choose.title=Choose Google Apps Account
+bapps.set.title=Set Google Apps Login Key
+bapps.save.title=Set Google Apps Login Key
+bapps.view.title=Your Google Apps Login Key
+bapps.delete.title=Delete Google Apps Login Key
 wpa.index.title=AirBears2 Login Key Option(s)
 wpa.set.title=Set AirBears2 Login Key
 wpa.view.title=Your AirBears2 Login Key
@@ -144,9 +144,9 @@ wpa.viewPage.pageRefreshWarning=<strong>Warning:</strong> Once you leave this pa
 wpa.view.returnToIndexLink=&laquo; Return to Key Options
 
 # bConnected pages
-bapps.choose.heading=Choose bConnected Account
-bapps.index.heading=bConnected Login Key <small>for account {0}</small>
-bapps.index.generalMessage=This system will generate a login key that will enable you to access your Berkeley Google Apps for Education account (bMail, bCal, bDocs) for mobile devices and desktop clients.</p><p>For more information on Berkeley Google Apps for Education, please see the <a href="https://bconnected.berkeley.edu/collaboration-services/google-apps-education" target="_blank">bConnected - Google Apps for Education</a> page.</p><p>Proceeding to generate a new bConnected Login Key will invalidate any previously generated Login Key. If you have entered a previously generated key in any of your devices, you will need to re-enter the new key on those devices.
+bapps.choose.heading=Choose Google Apps Account
+bapps.index.heading=Google Apps Login Key <small>for account {0}</small>
+bapps.index.generalMessage=This system will generate a login key that will enable you to access your Berkeley Google Apps for Education account (bMail, bCal, bDocs) for mobile devices and desktop clients.</p><p>For more information on Berkeley Google Apps for Education, please see the <a href="https://bconnected.berkeley.edu/collaboration-services/google-apps-education" target="_blank">bConnected - Google Apps for Education</a> page.</p><p>Proceeding to generate a new Google Apps Login Key will invalidate any previously generated Login Key. If you have entered a previously generated key in any of your devices, you will need to re-enter the new key on those devices.
 bapps.index.deleteNote=<strong>Note:</strong> The "Delete Key..." option appears below even if you have never set your key for this account. Google does not let us know if you have previously set a key, so we have no choice but to offer you the option to delete it.
 bapps.index.optionsHeading=Key Options
 bapps.index.optionsSetLink=Set Key...
@@ -159,21 +159,21 @@ bapps.index.disabledMessage=This account is currently disabled and you may not c
 
 bapps.noaccounts.generalMessage=According to our records, you currently do not have any accounts on the Google Apps system. If you think this is incorrect, please contact <a href="mailto:bcal@berkeley.edu">bcal@berkeley.edu</a>.
 
-bapps.setPage.heading=Set bConnected Login Key <small>for account {0}</small>
+bapps.setPage.heading=Set Google Apps Login Key <small>for account {0}</small>
 bapps.setPage.legend=Generate Key
-bapps.setPage.preGeneratedMessage=Use the form below to set your bConnected Login Key for account <strong>{0}</strong>. If you do not like the key which has been generated for you, you may generate a new one by clicking on the "Generate a different key..." button. Or, you can set your own by selecting the "Define Your Own" tab, and then enter a key, and key confirmation, in the provided form.
-bapps.setPage.defineYourOwnMessage=Use the form below to enter your own bConnected Login Key for account <strong>{0}</strong>. If you do not want to set your own key, you can select the "Pre-Generated" tab, and use the key which was been auto-generated for you.
+bapps.setPage.preGeneratedMessage=Use the form below to set your Google Apps Login Key for account <strong>{0}</strong>. If you do not like the key which has been generated for you, you may generate a new one by clicking on the "Generate a different key..." button. Or, you can set your own by selecting the "Define Your Own" tab, and then enter a key, and key confirmation, in the provided form.
+bapps.setPage.defineYourOwnMessage=Use the form below to enter your own Google Apps Login Key for account <strong>{0}</strong>. If you do not want to set your own key, you can select the "Pre-Generated" tab, and use the key which was been auto-generated for you.
 
-bapps.delete.heading=Delete bConnected Login Key <small>for account {0}</small>
-bapps.delete.generalMessage=If you wish to delete your bConnected Login Key for account <strong>{0}</strong>, click the "Delete Key" button below.
+bapps.delete.heading=Delete Google Apps Login Key <small>for account {0}</small>
+bapps.delete.generalMessage=If you wish to delete your Google Apps Login Key for account <strong>{0}</strong>, click the "Delete Key" button below.
 bapps.delete.deleteInfo=<strong>Note:</strong> If you have not previously set a key, this will report a successful deletion.
 
 bapps.formPage.generateKey=Generate a different key...
 bapps.formPage.keyHelpText=Once you save the key, you will be taken to another page where you can select and copy the key.
 bapps.formPage.keyHelpTextForUserDefined=Key must meet the <a data-toggle="modal" href="#passphraseRequirements" >CalNet Passphrase Requirements</a>, but the key <strong>can not be the same as your current CalNet passphrase</strong>.
 
-bapps.viewPage.heading=Your bConnected Login Key <small>for account {0}</small>
-bapps.viewPage.generalMessage=Your bConnected Login Key for account <strong>{0}</strong> is below. Please copy this key to your clipboard immediately so that you have it, as this is the only time you will be able to view this key.
+bapps.viewPage.heading=Your Google Apps Login Key <small>for account {0}</small>
+bapps.viewPage.generalMessage=Your Google Apps Login Key for account <strong>{0}</strong> is below. Please copy this key to your clipboard immediately so that you have it, as this is the only time you will be able to view this key.
 bapps.viewPage.pageRefreshWarning=<strong>Note:</strong> Once you leave this page you will not be able to use your back button to view the key again. So please copy the key now so that you have it saved should you leave this page. If you forget this key you can generate a new one at any time and you will need to replace it on all your configured devices.
 bapps.viewPage.returnToIndexLink=&laquo; Return to Key Options
 
@@ -198,14 +198,14 @@ wpa.alert.delete.successForTitle=AirBears2 Login Key deleted successfully.
 wpa.alert.save.canNotSetError=You are not allowed to set your own key for the AirBears2 service.
 wpa.alert.save.canNotSetErrorForTitle=You are not allowed to set your own key for the AirBears2 service.
 
-bapps.alert.save.successForTitleDefined=bConnected Login Key saved successfully for account {0}.
-bapps.alert.save.successForTitleGenerated=bConnected Login Key saved successfully for account {0}. See key details below.
-bapps.alert.save.success=bConnected Login Key saved successfully for account <strong>{0}</strong>. This is the key you will use on any mobile device (phones, iPads) and desktop clients. If you need assistance in using the bConnected suite of collaboration tools, please see the bConnected section of the <a href="https://kb.berkeley.edu/campus-shared-services/search.php?q=&cat=2326" target="_blank">Campus Shared Services Knowledge Base</a>.
-bapps.alert.delete.successForTitle=bConnected Login Key deleted successfully for account {0}.
-bapps.alert.delete.success=bConnected Login Key deleted successfully for account <strong>{0}</strong>.
-bapps.alert.delete.failedTitle=bConnected Login Key delete failed for account {0}.
-bapps.alert.delete.failed=bConnected Login Key was not deleted for account <strong>{0}</strong>. This was dDue to a communication error with a backend system. The error has been logged. Please try again later.
+bapps.alert.save.successForTitleDefined=Google Apps Login Key saved successfully for account {0}.
+bapps.alert.save.successForTitleGenerated=Google Apps Login Key saved successfully for account {0}. See key details below.
+bapps.alert.save.success=Google Apps Login Key saved successfully for account <strong>{0}</strong>. This is the key you will use on any mobile device (phones, iPads) and desktop clients. If you need assistance in using the Google Apps suite of collaboration tools, please see the Google Apps section of the <a href="https://kb.berkeley.edu/campus-shared-services/search.php?q=&cat=2326" target="_blank">Campus Shared Services Knowledge Base</a>.
+bapps.alert.delete.successForTitle=Google Apps Login Key deleted successfully for account {0}.
+bapps.alert.delete.success=Google Apps Login Key deleted successfully for account <strong>{0}</strong>.
+bapps.alert.delete.failedTitle=Google Apps Login Key delete failed for account {0}.
+bapps.alert.delete.failed=Google Apps Login Key was not deleted for account <strong>{0}</strong>. This was due to a communication error with a backend system. The error has been logged. Please try again later.
 bapps.alert.save.errorForTitle=Error(s) setting key:
-bapps.alert.save.failedTitle=bConnected Login Key saved failed for account {0}.
-bapps.alert.save.failed=bConnected Login Key was not saved for account <strong>{0}</strong>. This was dDue to a communication error with a backend system. The error has been logged. Please try again later.
+bapps.alert.save.failedTitle=Google Apps Login Key saved failed for account {0}.
+bapps.alert.save.failed=Google Apps Login Key was not saved for account <strong>{0}</strong>. This was due to a communication error with a backend system. The error has been logged. Please try again later.
 
