CS-26 Fixed to allow access ot bConn account instead of AirBears2

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -208,4 +208,5 @@ bapps.alert.delete.failed=Google Apps Login Key was not deleted for account <str
 bapps.alert.save.errorForTitle=Error(s) setting key:
 bapps.alert.save.failedTitle=Google Apps Login Key saved failed for account {0}.
 bapps.alert.save.failed=Google Apps Login Key was not saved for account <strong>{0}</strong>. This was due to a communication error with a backend system. The error has been logged. Please try again later.
+overview.notElegible=Your account is not elegible to set an AirBears2 or bConnected key. If you feel this is an error, please contact calnet@berkeley.edu
 
