add username and eduroam username messages

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -72,6 +72,8 @@ general.appName=Manage My Keys
 general.manage=Manage
 general.keys=Keys
 general.returnToOptions=&laquo; Return to Key Options
+general.viewPage.yourUserNameIs=Your UserName Is
+general.viewPage.yourEduRoamUserNameIs=Your EduRoam UserName Is
 general.viewPage.yourKeyIs=Your Key Is
 general.errorApplication=The Manage My Keys application has encountered an error. Please try what you were doing again. If the problem happens again, please email <a href="mailto:calnet-admin@lists.berkeley.edu?subject=Manage My Keys Application Error">CalNet Admin</a>.
 general.error404=The requested page does not exist in this application. Please use the navigation at the top of the application.
@@ -137,7 +139,7 @@ wpa.delete.generalMessage=If you wish to delete your AirBears2 Login Key, click 
 wpa.formPage.generateKey=Generate a different key...
 wpa.formPage.keyHelpText=Once you save the key, you will be taken to another page where you can select and copy the key.
 wpa.viewPage.heading=Your AirBears2 Login Key
-wpa.viewPage.generalMessage=Please enter the key, displayed below, on all the devices that you wish to access AirBears2 on. For more information on how to do this on specific devices, please visit the <a href="http://ist.berkeley.edu/airbears" target="_blank">AirBears website</a>.
+wpa.viewPage.generalMessage=Please enter the key and username, displayed below, on all the devices that you wish to access AirBears2 on. For more information on how to do this on specific devices, please visit the <a href="http://ist.berkeley.edu/airbears" target="_blank">AirBears website</a>.
 wpa.viewPage.regenerateMessage=If you do not like this key you can set a new one.
 wpa.viewPage.regenerateButton=Set New Key
 wpa.viewPage.pageRefreshWarning=<strong>Warning:</strong> Once you leave this page you will not be able to use your back button to view the key again. So please copy the key now so that you have it saved should you leave this page. If you forget this key you can generate a new one at any time.
