remove extra text from pre generated section that references user defined.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -163,7 +163,7 @@ bapps.noaccounts.generalMessage=According to our records, you currently do not h
 
 bapps.setPage.heading=Set Google Apps Login Key <small>for account {0}</small>
 bapps.setPage.legend=Generate Key
-bapps.setPage.preGeneratedMessage=Use the form below to set your Google Apps Login Key for account <strong>{0}</strong>. If you do not like the key which has been generated for you, you may generate a new one by clicking on the "Generate a different key..." button. Or, you can set your own by selecting the "Define Your Own" tab, and then enter a key, and key confirmation, in the provided form.
+bapps.setPage.preGeneratedMessage=Use the form below to set your Google Apps Login Key for account <strong>{0}</strong>. If you do not like the key which has been generated for you, you may generate a new one by clicking on the "Generate a different key..." button.
 bapps.setPage.defineYourOwnMessage=Use the form below to enter your own Google Apps Login Key for account <strong>{0}</strong>. If you do not want to set your own key, you can select the "Pre-Generated" tab, and use the key which was been auto-generated for you.
 
 bapps.delete.heading=Delete Google Apps Login Key <small>for account {0}</small>
